--- a/src/components/RecipeCard/RecipeCard.modules.css
+++ b/src/components/RecipeCard/RecipeCard.modules.css
@@ -1,3 +1,5 @@
+
+
 .recipe_card {
     width: 300px;
     height: 450px;
@@ -19,8 +21,12 @@
 }
 
 img {
-    height: 100%;
-    width: 100%;
+    height: 300px;
+    width: 300px;
     object-fit: cover;
     border-radius: 3px 3px 0px 0px;
+}
+
+.recipe_card, button {
+    background-color: rgb(6, 137, 177);
 }
