--- a/src/components/homeComponents/Home.module.css
+++ b/src/components/homeComponents/Home.module.css
@@ -24,3 +24,9 @@
     padding: 0 0 0 5px;
     box-sizing: border-box;
 }
+
+.search_bar input {
+    width: 100%;
+    border-radius: 0 30px 30px 0;
+    font-size: 20px;
+}
