--- a/src/components/detailComponents/DetailScreen.module.css
+++ b/src/components/detailComponents/DetailScreen.module.css
@@ -1,5 +1,5 @@
 section {
-    height: 120vh; 
+    height: 140vh; 
     padding-bottom: 40px;
 }
 
@@ -8,27 +8,51 @@ section {
     flex-direction: row;
     justify-content: space-between;
     align-items: center;
-    border: 2px solid rgba(0, 0, 0, 0.1);
 }
 
 .info {
     display: flex;
-    gap: 20px;
-    flex-basis: 50%;
+    flex-direction: column; 
+    text-align: center;
+    background-color: #fff;
+    box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
+    box-sizing: border-box;
+    width: 20%;
+    padding: 20px;
+    margin-left: 300px;
 }
 
 .instructions {
     display: flex;
-    flex-basis: 50%;
-}
-
-.info > div, .instructions {
+    justify-content: space-between;
+    flex-direction: column;
+    text-align: center;
     background-color: #fff;
     box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
     padding: 20px; 
     box-sizing: border-box;
+    width: 30%;
+    margin-right: 300px;
 }
 
 h3, p {
-    margin: 0 0 10px 0;
+    color: black;
+    text-align: center;
+}
+
+h3 {
+    font-size: 32px;
+}
+
+.banner {
+    width: 100%;
+    height: 450px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    gap: 30px;
+    color: white;
+    background-size: cover;
+    margin-bottom: 30px;
 }
