--- a/src/components/RecipeCard/RecipeCard.module.css
+++ b/src/components/RecipeCard/RecipeCard.module.css
@@ -2,7 +2,7 @@
 
 .recipe_card {
     width: 300px;
-    height: 450px;
+    height: 400px;
     align-items: center;
     display: flex;
     flex-direction: column;
@@ -27,6 +27,6 @@ img {
     border-radius: 3px 3px 0px 0px;
 }
 
-.recipe_card, button {
+.recipe_card button {
     background-color: rgb(6, 137, 177);
 }
