--- a/src/App.css
+++ b/src/App.css
@@ -21,3 +21,18 @@ time, mark, audio, video {
 }
 
 /* --------- Begin your CSS Below here --------- */
+
+html, body {
+	height: 100%;
+}
+
+.app {
+	display: flex;
+	flex-direction: column;
+	min-height: 100vh;
+	padding-bottom: 150px;
+}
+
+.app > Routes {
+	flex-grow: 1;
+}
