--- a/src/components/Footer/Footer.module.css
+++ b/src/components/Footer/Footer.module.css
@@ -8,6 +8,7 @@ footer {
     justify-content: space-between;
     align-items: center;
     padding: 0 20px;
+    margin-top: 150px;
 }
 
 .socials, .logo {
