--- a/src/App.css
+++ b/src/App.css
@@ -28,6 +28,7 @@ html, body {
 
 .app {
 	display: flex;
+	justify-content: space-between;
 	flex-direction: column;
 	min-height: 100vh;
 	padding-bottom: 150px;
