--- a/src/components/homeComponents/Home.module.css
+++ b/src/components/homeComponents/Home.module.css
@@ -1,10 +1,15 @@
-
+.homescreen {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding-bottom: 50px;
+}
 
 .recipe_section {
     display: flex;
     flex-direction: column;
     align-items: center;
-    padding: 30px;
+    padding-bottom: 30px;
 }
 
 .recipe_container {
@@ -13,6 +18,7 @@
     justify-content: center;
     flex-wrap: wrap;
     margin-top: 50px;
+    
 }
 
 .search_bar {
